Fixed the arrow clipping in Firefox

--- a/wp-content/themes/test36/less/styles.less
+++ b/wp-content/themes/test36/less/styles.less
@@ -301,10 +301,10 @@ h1,
 	left: 50%;
 	margin-left: -20px;
 	position: fixed;
-	-webkit-clip-path: url("#clip-shape");
+	-webkit-clip-path: url('/36test/#clip-shape');
 	-webkit-clip-path: polygon(0% 87%, 50% 0%, 50% 0%, 100% 87%); /* works better for webkit */
 	clip-path: polygon(0% 87%, 50% 0%, 50% 0%, 100% 87%);
-	clip-path: url("#clip-shape"); /* only way to do it in Firefox */
+	clip-path: url('/36test/#clip-shape'); /* only way to do it in Firefox */
 	.logo__dark {
 		background: @dark;
 		width: 100%;
